--- a/web/index-extenstion.html
+++ b/web/index-extenstion.html
@@ -6,23 +6,23 @@
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="A FreeTON Community Wallet was create by #137 Contest">
+    <meta name="description" content="A Free TON Wallet was create by #137 Contest">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="FreeTON Community Wallet">
+    <meta name="apple-mobile-web-app-title" content="Free TON Wallet">
     <link rel="apple-touch-icon" href="icons/freeton-256.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="crystal.png" />
 
-    <title>FreeTON Community Wallet</title>
+    <title>Free TON Wallet</title>
     <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
-    <iframe src="app.html" frameborder="0"></iframe>
+    <iframe src="index-extenstion-frame.html" frameborder="0"></iframe>
 </body>
 
 </html>
