Add notes how to build Web Extension

--- a/web/index-extenstion.html
+++ b/web/index-extenstion.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <iframe src="index-extenstion-frame.html" frameborder="0"></iframe>
+    <iframe src="extenstion.html" frameborder="0" width="360" height="600"></iframe>
 </body>
 
 </html>
