--- a/web/index-devel.html
+++ b/web/index-devel.html
@@ -29,7 +29,7 @@
   <title>flutter_starter</title>
   <link rel="manifest" href="manifest.json">
 </head>
-<body>
+<body style="background-color: lightgray;">
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
