--- a/web/extenstion.html
+++ b/web/extenstion.html
@@ -1,6 +1,9 @@
 <html>
-  <body>
-    <script src="extension_loader.js" type="application/javascript"></script>
-    <script src="main.dart.js" type="application/javascript"></script>
-  </body>
+
+<body>
+	<script src="extension_loader.js" type="application/javascript"></script>
+	<script src="tonclient.js" type="application/javascript"></script>
+	<script src="main.dart.js" type="application/javascript"></script>
+</body>
+
 </html>
