Add submodule ton-client-web-js-umd-facade

--- a/web/index-webapp-devel.html
+++ b/web/index-webapp-devel.html
@@ -17,7 +17,7 @@
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="crystal.png" />
 
-	<title>Free TON Wallet</title>
+	<title>Free TON Wallet (DEVEL)</title>
 	<link rel="manifest" href="manifest.json">
 </head>
 
@@ -29,7 +29,7 @@
 			});
 		}
 	</script>
-	<script src="ton-client-web-js-umd-facade.js" type="application/javascript"></script>
+	<script src="ton-client-web-js-umd-facade.devel.js" type="application/javascript"></script>
 	<script src="main.dart.js" type="application/javascript"></script>
 </body>
 
