--- a/web/index-extenstion.html
+++ b/web/index-extenstion.html
@@ -6,7 +6,7 @@
 
 	<meta charset="UTF-8">
 	<meta content="IE=Edge" http-equiv="X-UA-Compatible">
-	<meta name="description" content="A Free TON Wallet was create by #137 Contest">
+	<meta name="description" content="A Free TON Wallet was created by #137 Contest">
 
 	<!-- iOS meta tags & icons -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
