Switch to github version of wallet.platform.web

--- a/web/extenstion.html
+++ b/web/extenstion.html
@@ -2,7 +2,7 @@
 
 <body>
 	<script src="extension_loader.js" type="application/javascript"></script>
-	<script src="tonclient.js" type="application/javascript"></script>
+	<script src="freeton_wallet_platform.js" type="application/javascript"></script>
 	<script src="main.dart.js" type="application/javascript"></script>
 </body>
 
