--- a/web/index-webapp-devel.html
+++ b/web/index-webapp-devel.html
@@ -28,7 +28,7 @@
 			});
 		}
 	</script>
-	<script src="ton-client-web-js-umd-facade.devel.js" type="application/javascript"></script>
+	<script src="freeton_wallet_platform.js" type="application/javascript"></script>
 	<script src="main.dart.js" type="application/javascript"></script>
 </body>
 
