Fix filenames in README, fix UI

--- a/web/index-extenstion.html
+++ b/web/index-extenstion.html
@@ -19,6 +19,14 @@
 
 	<title>Free TON Wallet</title>
 	<link rel="manifest" href="manifest.json">
+	<style>
+		body {
+			margin: 0;
+		}
+		body::-webkit-scrollbar {
+			display: none;
+		}
+	</style>
 </head>
 
 <body>
