Fix interop call issues.

--- a/web/index-webapp-devel.html
+++ b/web/index-webapp-devel.html
@@ -28,8 +28,8 @@
 			});
 		}
 	</script>
-	<script src="freeton_wallet_platform.js" type="application/javascript"></script>
-	<script src="main.dart.js" type="application/javascript"></script>
+	<script src="freeton_wallet_platform.js" type="application/javascript" async="false" defer="false"></script>
+	<script src="main.dart.js" type="application/javascript" async="false" defer="false"></script>
 </body>
 
 </html>
