Split manifest for webapp and extenstion flavour

--- a/web/index-extenstion.html
+++ b/web/index-extenstion.html
@@ -18,7 +18,7 @@
 	<link rel="icon" type="image/png" href="crystal.png" />
 
 	<title>Free TON Wallet</title>
-	<link rel="manifest" href="manifest.json">
+	<link rel="manifest" href="manifest-extension.json">
 	<style>
 		body {
 			margin: 0;
