--- a/web/index-webapp-devel.html
+++ b/web/index-webapp-devel.html
@@ -17,7 +17,7 @@
 	<link rel="icon" type="image/png" href="crystal.png" />
 
 	<title>Free TON Wallet (DEVEL)</title>
-	<link rel="manifest" href="manifest.json">
+	<link rel="manifest" href="manifest-webapp.json">
 </head>
 
 <body style="background-color: lightgray;">
@@ -28,7 +28,7 @@
 			});
 		}
 	</script>
-	<script src="freeton_wallet_platform.js" type="application/javascript" async="false" defer="false"></script>
+	<script src="freeton_wallet_platform.devel.js" type="application/javascript" async="false" defer="false"></script>
 	<script src="main.dart.js" type="application/javascript" async="false" defer="false"></script>
 </body>
 
