--- a/web/index-webapp.html
+++ b/web/index-webapp.html
@@ -18,7 +18,7 @@
 	<link rel="icon" type="image/png" href="crystal.png" />
 
 	<title>Free TON Wallet</title>
-	<link rel="manifest" href="manifest.json">
+	<link rel="manifest" href="manifest-webapp.json">
 </head>
 
 <body style="background-color: lightgray;">
@@ -29,8 +29,8 @@
 			});
 		}
 	</script>
-	<script src="ton-client-web-js-umd-facade.js" type="application/javascript"></script>
-	<script src="main.dart.js" type="application/javascript"></script>
+	<script src="freeton_wallet_platform.js" type="application/javascript" async="false" defer="false"></script>
+	<script src="main.dart.js" type="application/javascript" async="false" defer="false"></script>
 </body>
 
 </html>
