--- a/web/extenstion.html
+++ b/web/extenstion.html
@@ -1,9 +1,9 @@
 <html>
 
 <body>
-	<script src="extension_loader.js" type="application/javascript"></script>
-	<script src="freeton_wallet_platform.js" type="application/javascript"></script>
-	<script src="main.dart.js" type="application/javascript"></script>
+	<script src="extension_loader.js" type="application/javascript" async="false" defer="false"></script>
+	<script src="freeton_wallet_platform.js" type="application/javascript" async="false" defer="false"></script>
+	<script src="main.dart.js" type="application/javascript" async="false" defer="false"></script>
 </body>
 
 </html>
